# Tpi-ProgramacionII

./: .gitignore  App.cpp  App.h  CMakeLists.txt  Cliente.cpp  Cliente.h  ClienteManager.cpp  ClienteManager.h  ClienteMenu.cpp  ClienteMenu.h  Clientes.cpp  Clientes.h  ClientesArchivo.cpp  ClientesArchivo.h  Fecha.cpp  Fecha.h  Localidad.cpp  Localidad.h  LocalidadArchivo.cpp  LocalidadArchivo.h  Pago.cpp  Pago.h  PagoArchivo.cpp  PagoArchivo.h  PagoManager.cpp  PagoManager.h  PagoMenu.cpp  PagoMenu.h  Poliza.cpp  Poliza.h  PolizaArchivo.cpp  PolizaArchivo.h  PolizaManager.cpp  PolizaManager.h  PolizaMenu.cpp  PolizaMenu.h  README.md  ReporteMenu.cpp  ReporteMenu.h  Reportes.cpp  (+42 more)
inputData/: clientes.csv  localidades.csv  pagos.csv  polizas.csv  siniestros.csv  tiposSeguros.csv  tiposSiniestros.csv  vehiculos.csv
tools/: generadorDeArchivosDeDatos.cpp  generadorDeArchivosDeDatos.h  imprimirArchivos.cpp  imprimirArchivos.h
